# replay

./: .env  .gitignore  .node-version  README.md  debug_inputs.py  debug_m21.py  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.lovable/: plan.md
docs/: curriculum-export.md  metronome-proposals.md  python-venv-runbook.md  skill-attribution-analysis.md  tune-eval-flow.md
public/: manifest.json
scripts/: compile-curriculum.ts
src/: index.css
src/components/: AddNoteSequenceDialog.tsx  AddPartitionDialog.tsx  AskButton.tsx  CompositionDropdown.tsx  CompositionSubmenu.tsx  DebugCard.tsx  DebugLLMSheet.tsx  EvaluationDebugCard.tsx  EvaluationScreen.tsx  FeedbackScreen.tsx  LessonCard.tsx  LessonDebugCard.tsx  LoadingSpinner.tsx  MergeSessionDialog.tsx  Metronome.tsx  MidiConnector.tsx  NewUserDialog.tsx  OpenSheetMusicDisplayView.tsx  Piano.tsx  PianoKey.tsx  PianoSheetPixi.tsx  PianoSheetPixiLayout.ts  PracticePlanDebugCard.tsx  QuestEditor.tsx  RecordingEndingToast.tsx  RecordingProgress.tsx  SaveCompositionModal.tsx  SheetMusic.tsx  TeacherWelcome.tsx  TopBar.tsx  TopToast.tsx  (+9 more)
supabase/: config.toml
tooling/: pyproject.toml
tooling/tune_pipeline/: __init__.py  align.py  cli.py  extract.py  hands.py  io.py  midi_to_ns.py  mxl_parse.py  mxl_unpack.py  nuggets_extract.py  nuggets_resolve.py  validate_teacher.py  xml_simplify.py  xml_split_hands.py  xml_to_midi.py
tooling/tune_pipeline.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tooling/tune_pipeline/tests/: test_extract.py  test_pipeline.py
(+682 files in other folders)
