[project]
name = "tune-pipeline"
version = "0.1.0"
description = "Local tune pipeline CLI"
requires-python = ">=3.10"
dependencies = [
  "music21>=9.1.0",
  "pretty_midi>=0.2.10",
  "pydantic>=2.6.0",
]

[project.scripts]
tune-pipeline = "tune_pipeline.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
